After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733713 - [nm-c-e] Missing IPv6 support for WWAN connections
[nm-c-e] Missing IPv6 support for WWAN connections
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: nm-connection-editor
git master
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-07-25 07:03 UTC by Tore Anderson
Modified: 2014-09-19 18:57 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Tore Anderson 2014-07-25 07:03:16 UTC
NM git master recently gained support for IPv6 on WWAN connections:

http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=0151df2f0a8c8f2f8d57e9fbfccc48cf4fae2317

nm-connection-editor needs to be updated in a corresponding manner. Currently, when editing a WWAN connection profile, there is no IPv6 tab at all, and it is not possible to set the IPv4 mode to "disabled" (which is in some cases required to be able to connect to IPv6-capable APNs).

Tore
Comment 1 Dan Winship 2014-07-25 12:45:36 UTC
Pushed danw/wwan-ipv6
Comment 2 Thomas Haller 2014-07-25 13:39:21 UTC
Looks good to me.
Comment 3 Tore Anderson 2014-07-25 14:22:42 UTC
To me too, functionality-wise that is. Didn't look at the code. Thanks!

Tore
Comment 4 Dan Williams 2014-07-25 14:36:32 UTC
Looks good to me too.

I pushed a new commit "editor: remove "(PPP)" from WWAN addressing modes" too, so make sure to pull before you rebase and merge...