connection-editor: support IPv6 on mobile devices

https://bugzilla.gnome.org/show_bug.cgi?id=733713